# kphoh

./: CMakeLists.txt  main.cpp
data/: ct.csv  it.csv  mc.csv
include/CSVParser/: CSVParser.cpp  CSVParser.h
include/hash/: loadHash.h  loadMum.h  loadSpooky.h  mum.h  sph.h  spooky.cpp  spooky.h  wyhash.h  xxh.h
include/hashmap/: hashmap_scalar.h
include/hcrstrat/: linear_probing.h
include/umash/: umash.c
